--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -16,11 +16,15 @@
 
 <body>
     <div id="app">
-        <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
-        </svg>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" aria-valuenow="100"
+                aria-valuemin="0" aria-valuemax="100" style="width: var(--blazor-load-percentage, 0%)">
+                <div class="loading-text"></div>
+            </div>
+        </div>
         <div class="loading-progress-text"></div>
+
+        <img class="loading-progress" src="favicon-akf.png" />
     </div>
 
     <div id="blazor-error-ui">
