--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -16,6 +16,17 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
     <link rel="icon" type="image/png" href="favicon-akf.webp" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NMK7DR1R5V"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-NMK7DR1R5V');
+    </script>
+
 </head>
 
 <body>
