--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -31,15 +31,7 @@
 
 <body>
     <div id="app">
-        <div class="progress">
-            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" aria-valuenow="100"
-                aria-valuemin="0" aria-valuemax="100" style="width: var(--blazor-load-percentage, 0%)">
-                <div class="loading-text"></div>
-            </div>
-        </div>
-        <div class="loading-progress-text"></div>
-
-        <img class="loading-progress" src="favicon-akf.webp" alt="loading favicon"/>
+        <img src="akaratefelgueiras/5cdc80c184087119d255cf9f629e95e8.webp" alt="AKF Logo" class="loading-logo" />
     </div>
 
     <div id="blazor-error-ui">
