[AKF] - Exemplo para transferencia de ficheiro

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -25,6 +25,9 @@
         gtag('config', 'G-NMK7DR1R5V');
     </script>
 
+    <!-- Javascript for file download functionality -->
+    <script src="js/download.js"></script>
+
 </head>
 
 <body>
